@@ -1,5 +1,5 @@
 /* str/findprevnot.c - Find the previous instance not of a character set
- * Copyright (C) 2002  Bruce Guenter <bruceg@em.ca>
+ * Copyright (C) 2002,2005  Bruce Guenter <bruceg@em.ca>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,10 +23,36 @@ int str_findprevnot(const str* s, const char* list, unsigned pos)
 {
   char* p;
   int map[256];
-  if (pos >= s->len) pos = s->len - 1;
-  str_buildmap(map, list);
-  for (p = s->s + pos; p >= s->s; --p, --pos)
-    if (map[*(unsigned char*)p] < 0)
-      return pos;
+  if (s->len > 0) {
+    if (pos >= s->len)
+      pos = s->len - 1;
+    str_buildmap(map, list);
+    for (p = s->s + pos; p >= s->s; --p, --pos)
+      if (map[*(unsigned char*)p] < 0)
+	return pos;
+  }
   return -1;
 }
+
+#ifdef SELFTEST_MAIN
+#include "selftest.c"
+void selftest(void)
+{
+  str s = { "01234567890123456", 16, 0 };
+  str e = { 0, 0, 0 };
+  obuf_puti(&outbuf, str_findprevnot(&s, "654", 10)); NL();
+  obuf_puti(&outbuf, str_findprevnot(&s, "654", 5)); NL();
+  obuf_puti(&outbuf, str_findprevnot(&s, "012", 2)); NL();
+  obuf_puti(&outbuf, str_findprevnot(&s, "456", -1)); NL();
+  obuf_puti(&outbuf, str_findprevnot(&s, "678", -1)); NL();
+  obuf_puti(&outbuf, str_findprevnot(&e, "678", -1)); NL();
+}
+#endif
+#ifdef SELFTEST_EXP
+10
+3
+-1
+13
+15
+-1
+#endif
